kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  namespace: database
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    postgresql: postgres
    role: primary
  loadBalancerIP: 192.168.1.160
