kubernetes/apps/database/cloudnative-pg/cluster/tcproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/tcproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: postgres
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: postgres
  rules:
    - backendRefs:
        - name: postgres-rw
          port: 5432
